debugging, finishing touches